--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
             <version>6.2.0.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.18.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
